--- a/ch06-compose/docker-compose.yaml
+++ b/ch06-compose/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: 'mongo'
     volumes:
       - data:/data/db
-    environment:
+    # environment:
       # # 寫法一
       # - MONGO_INITDB_ROOT_USERNAME=max
       # - MONGO_INITDB_ROOT_PASSWORD=secret
@@ -13,12 +13,29 @@ services:
       # MONGO_INITDB_ROOT_PASSWORD: secret
     # 寫法三：使用 .env 檔案
     env_file: ./env/mongodb.env
-    # networks: # 可以不用寫，compose 會預設
-    #   - goals-net
-  # backend:
-  #   image:
+    # networks: # 想自定義名稱再加就好了，因為 compose 會預設
+    #   - customize-net
+  backend:
+    build: ./backend
+    # 另一種寫法，後面課程會用到
+    # build: 
+    #   context: ./backend 
+    #   dockerfile: Dockerfile # 名稱不是 Dockerfile 再加就好了
+    #   args:
+    #     - name=value
+    ports:
+      - '80:80'
+    volumes:
+      - logs:/app/logs
+      - ./backend:/app
+      - /app/node_modules
+    env_file: ./env/backend.env
+    depends_on:
+      - mongodb
+
   # frontend:
   #   image:
 
 volumes: # 有用到命名卷，要另外在這裡設定
   data: # 冒號後沒有值
+  logs:
