--- a/ch07-utility-container/package.json
+++ b/ch07-utility-container/package.json
@@ -1,11 +1,14 @@
 {
   "name": "util-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "experss": "0.0.1-security"
+  }
 }
