--- a/ch07-utility-container/package.json
+++ b/ch07-utility-container/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "util-demo",
+  "name": "util-compose-demo",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,8 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "experss": "0.0.1-security"
-  }
+  },
+  "description": ""
 }
