--- a/ch08-laravel-php/docker-compose.yaml
+++ b/ch08-laravel-php/docker-compose.yaml
@@ -21,7 +21,13 @@ services:
     # environment:  官網查可用變數們、通常寫在 .env
     #   - name=value
     env_file:
-      - ./env/mysql.env 
+      - ./env/mysql.env
+  composer:
+    build:
+      context: ./dockerfiles
+      dockerfile: composer.dockerfile
+    volumes:
+      - ./src:/var/www/html
   # artisan:
   # npm:
     
